import '@testing-library/jest-dom';
import React from 'react';
import { render, screen } from '@testing-library/react';
import AboutMe from './AboutMe';
import TextsContext from '../context/TextsContext';
import { textsEn, textsPt } from '../../utils/texts';
import { setJestWindowWidth } from '../../utils/jest/setJestWindowWidth';

describe('<AboutMe />', () => {
    test('renders properly', () => {
        const { container } = render(<AboutMe />);

        expect(screen.getByText(textsPt.about)).toBeInTheDocument();
        expect(screen.getByText(textsPt.hiMyNameIs)).toBeInTheDocument();
        expect(screen.getByText(textsPt.withMoreThan)).toBeInTheDocument();
        expect(screen.getByText(textsPt.thesocialMediaCommunicationStrategy)).toBeInTheDocument();
        expect(screen.getByText(textsPt.getToKnowMeBetter)).toBeInTheDocument();

        expect(container.getElementsByClassName('alignCenter').length).toBe(0);
        expect(container.firstChild).toMatchSnapshot();
    });

    test('renders properly in English', () => {
        const { container } = render(
            <TextsContext.Provider
                value={{
                    texts: textsEn,
                }}
            >
                <AboutMe />
            </TextsContext.Provider>
        );

        expect(screen.getByText(textsEn.about)).toBeInTheDocument();
        expect(screen.getByText(textsEn.hiMyNameIs)).toBeInTheDocument();
        expect(screen.getByText(textsEn.withMoreThan)).toBeInTheDocument();
        expect(screen.getByText(textsEn.thesocialMediaCommunicationStrategy)).toBeInTheDocument();
        expect(screen.getByText(textsEn.getToKnowMeBetter)).toBeInTheDocument();

        expect(container.getElementsByClassName('alignCenter').length).toBe(0);
        expect(container.firstChild).toMatchSnapshot();
    });

    test('renders properly in mobile', () => {
        setJestWindowWidth(true);

        const { container } = render(<AboutMe />);

        expect(container.getElementsByClassName('alignCenter').length).toBe(1);
        expect(container.firstChild).toMatchSnapshot();
    });
});
